--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
 
-<body>
+<body class="is-loading">
+  <div class="curtain">
+    <div class="loader">
+        loading...
+    </div>
+</div> 
   <div id="playAudioButton" class="overlay" onclick="startPage()">
     <p class="smoke-effect" id="clickableText">点击进入</p>
   </div>
