--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>你的名字</title>
   <link rel="stylesheet" href="./css/styles.css">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+  <link rel="icon" href="./assets/favicon.ico" type="image/x-icon">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Playfair+Display:wght@700&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -14,7 +17,7 @@
     <p class="smoke-effect" id="clickableText">点击进入</p>
   </div>
   <div id="modal" class="modal" onclick="hideModal()">
-    <img id="modal-image" class="modal-image"/>
+    <img id="modal-image" class="modal-image" />
   </div>
   <footer>
     <p>&copy; 2021-2025 送给小玉的礼物</p>
@@ -28,6 +31,7 @@
   <!--/*外层最大容器*/-->
   <div class="wrap">
     <!--    /*包裹所有元素的容器*/-->
+
     <div class="cube">
       <!--前面图片 -->
       <div class="out_front">
